Swagers for Auth , Services and ServicesCategory
